--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: lib
-        path: src/jni/libs
+        path: src/libs
     - name: Upload obj
       uses: actions/upload-artifact@v4.6.2
       with:
